Added recruiter job panel

--- a/src/index.css
+++ b/src/index.css
@@ -18,21 +18,20 @@ code {
     monospace;
 }
 
-/* width ::-webkit-scrollbar {
-  width: 10px;
-} */
+::-webkit-scrollbar {
+  width: 5px;
+}
 
-/* Track
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
-} */
+}
 
 /* Handle */
-/* ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background: #bebebe;
-} */
+}
 
 /* Handle on hover */
-/* ::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
   background: #bebebe;
-} */
+}
